--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     working_directory: /home/agent/build
     docker:
-      - image: seandietrich/ci-agent:php
+      - image: docksal/ci-agent:php
     environment:
        BASH_ENV: /home/agent/.bashrc  # Tell CircleCI where to read the shared build environment variables from
     steps:
