--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,4 +27,5 @@ workflows:
   version: 2
   build_sandbox:
     jobs:
-      - build
+      - build:
+          context: global  # Load org level environment variables from CircleCI
